<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:contentPaddingBottom="12dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="5dp"

    ><!--    android:background="@drawable/ripple_item_bg"-->
    <LinearLayout
        android:id="@+id/ll_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            tools:src="@mipmap/our"
            android:transitionName="@string/transition_img" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1" android:transitionName="@string/transition_title"
            android:textColor="@color/colorContent"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:text="little-Princess" />

        <TextView
            android:id="@+id/tv_memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:maxLines="3"
            android:transitionName="@string/transition_memo"
            tools:text="春风十里不如你" />
    </LinearLayout>
</android.support.v7.widget.CardView>